--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,15 @@
 		"source": "https://github.com/bcit-ci/CodeIgniter"
 	},
 	"require": {
-		"php": ">=7.2"
+		"php": ">=7.2",
+		"tecnickcom/tcpdf": "^6.6",
+		"ext-curl": "*",
+		"guzzlehttp/guzzle": "^7.8"
+	},
+	"autoload": {
+		"classmap": [
+			"application/"
+		]
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
