--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 		"php": ">=7.2",
 		"tecnickcom/tcpdf": "^6.6",
 		"ext-curl": "*",
-		"guzzlehttp/guzzle": "^7.8"
+		"guzzlehttp/guzzle": "^7.8",
+		"ext-simplexml": "*"
 	},
 	"autoload": {
 		"classmap": [
